--- a/app/views/comments/_new_comment.html.haml
+++ b/app/views/comments/_new_comment.html.haml
@@ -1,10 +1,11 @@
-= form_for @comment, :builder => FormHelper::BHLFormBuilder do |f|
-  = validation_errors_for(@comment)
-  %ul
-    %li
-      = f.text_field :text ,  :size => 30
-      = f.hidden_field :volume_id, value: @volume_id
-      = f.hidden_field :collection_id, value: @collection_id
-      = f.hidden_field :user_id, value: session[:user_id]
-  %fieldset
-    = f.submit I18n.t('submit_buton'), :class => "btn"
+.form
+  = form_for @comment, :builder => FormHelper::BHLFormBuilder do |f|
+    = validation_errors_for(@comment)
+    %ul
+      %li
+        = f.text_field :text ,  :size => 100 
+        = f.hidden_field :volume_id, value: @volume_id
+        = f.hidden_field :collection_id, value: @collection_id
+        = f.hidden_field :user_id, value: session[:user_id]
+    %fieldset
+      = f.submit I18n.t('submit_buton'), :class => "btn"
