--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -25,20 +25,14 @@
     = parse_collection_status(@collection.status)
     %br
     %br
+    - if session["user_id"] == @collection.user_id
+      = link_to I18n.t(:edit_collection), :controller => :collections ,:action => :edit, :id => @collection
     - if logged_in?
       - if @collection.rate.nil?
         - rate = 0.0
       - else
         - rate = @collection.rate
       = render :partial => "collections/rating", :locals => {:collection_rate => @collection.rate, :user_rate => @user_collection_rate, :col_id =>  @collection.id}
-    
-    - if(@collection.photo_name.nil?)
-      - @thumb = "images_#{I18n.locale}/defaultCollection.jpg"
-    - else
-      - @thumb = "images_#{I18n.locale}/collections/#{@collection.id}/#{@collection.photo_name}"
-    
-    = image_tag("/#{@thumb}", :width => 109, :border => 0)
-    
     - if session["user_id"] == @collection.user_id
       = link_to I18n.t(:edit_collection), :controller => :collections ,:action => :edit, :id => @collection
     = render :partial => "comments/index"
