--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,3 +10,5 @@
   = render :partial => "users/saved_queries"
   - elsif @current == 'collections'
   = render :partial => "users/collections"
+  - elsif @current == 'user_activities'
+  = render :partial => "users/user_activities"
