--- a/app/views/log_activities/index.html.haml
+++ b/app/views/log_activities/index.html.haml
@@ -1,3 +1,5 @@
 - @log_records.each do |record|
-  %h3
-    = record.html_safe
+  = record.html_safe
+- if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
+  - @pages = adjustPaging(@page, @lastPage)
+  = render :partial => "books/paging"
