--- a/app/views/names/index.html.haml
+++ b/app/views/names/index.html.haml
@@ -6,6 +6,8 @@
 %script(type="text/javascript" src="/jsTree/source/_lib/sarissa.js")
 %script(type="text/javascript" src="/jsTree/source/_lib/sarissa_ieemu_xpath.js")
 %script(type="text/javascript" src="/jsTree/source/_lib/jquery.xslt.js")
+%script(type="text/javascript" src="/assets/names.js")
+
 .page
   .page_border
     %table{:width => "100%", :border => "0", :style => "border-collapse:collapse", :cellspacing => "0", :cellpadding => "3"}
