--- a/app/views/collections/_sort.html.haml
+++ b/app/views/collections/_sort.html.haml
@@ -1,7 +1,7 @@
 %span 
   = link_to image_tag("/images_#{I18n.locale}/up.png", :alt => I18n.t(:sort_desc), 
         :title => I18n.t(:sort_desc), :width => 15, :height => 14) , 
-    {:params => search_view(params, 'title DESC')}
+    {:params => search_view(params, '#{sort_type} DESC')}
   = link_to image_tag("/images_#{I18n.locale}/down.png", :alt => I18n.t(:sort_asc), 
         :title => I18n.t(:sort_asc), :width => 15, :height => 14) , 
-    {:params => search_view(params, 'title ASC')}
+    {:params => search_view(params, '#{sort_type} ASC')}
