sort collections by rating

--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -8,7 +8,7 @@
         = I18n.t(:sort_by_title) 
         = render :partial => "collections/sort" , :locals => {:sort_type => "title"}
         = I18n.t(:sort_by_rating) 
-        = render :partial => "collections/sort" , :locals => {:sort_type => "order"}
+        = render :partial => "collections/sort" , :locals => {:sort_type => "rate"}
       .searchfilter
         = render :partial => "collections/breadcrumb"
         .clear
