--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -21,3 +21,5 @@
   - else
     = render :partial => "books/format"
 = render :partial => "books/userviews"
+= render :partial => "books/related_books"
+
