--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -176,21 +176,27 @@ h3 a
   display: inline-block
   border: 1px solid #d1a8dd
   float: left
-  min-width: 80px
   padding: 5px
   border-radius: 4px
   background-color: #9a71a6
   color: #fff
   margin: 5px
+  width: auto
   a
     color: #fff
-    &:hover
-      text-decoration: none
-      color: #ededed
+  .close
+    margin-left: 5px
+    margin-top: -1px
+  a:hover
+    text-decoration: none
+    color: #ededed
   &:hover
     background-color: #6d4479
-      
-      
+    cursor: pointer
+
+.sort
+  padding-top: 5px
+  
 //NEW_LAYOUT DEVELOPER STYLING
 //***********************Start of Tooltip Styling********************************
 // This is the default Tooltipster theme (feel free to modify or duplicate and create multiple themes!):
