--- a/app/assets/stylesheets/bootstrap.sass
+++ b/app/assets/stylesheets/bootstrap.sass
@@ -220,14 +220,12 @@ input, button, select, textarea
   line-height: inherit
 
 a
-  color: #428bca
+  color: #16a768
   text-decoration: none
   &:hover
-    color: #2a6496
-    text-decoration: underline
+    color: #449170
   &:focus
-    color: #2a6496
-    text-decoration: underline
+    color: #449170
     outline: thin dotted #333
     outline: 5px auto -webkit-focus-ring-color
     outline-offset: -2px
