--- a/app/views/books/_sort.html.haml
+++ b/app/views/books/_sort.html.haml
@@ -1,3 +1,24 @@
+= javascript_include_tag 'jquery/rating/jRating.jquery.js'
+  
+:javascript 
+  $(document).ready(function() {
+    $("#sort").click(function () {
+      $.ajax({type: "GET", 
+              url: "/books?sort_type=rate+desc", 
+              dataType: "script",
+              success: function(data){
+
+             }
+      });
+    });
+  });
+
+%ul.fa-ul.tools
+  %li
+    %i.fa.fa-li.fa-plus-square
+      %small
+        %a{:href => "#", :id => "sort"}
+          ="sort"
 %span 
   = link_to image_tag("/images_#{I18n.locale}/up.png", :alt => I18n.t(:sort_desc), 
         :title => I18n.t(:sort_desc), :width => 15, :height => 14) , 
